# K2SHBWI

./: .gitignore  ALL_TASKS_COMPLETE.md  BADGE_OPTIONS_PREVIEW.md  CLI_GUIDE.md  CODE_OF_CONDUCT.md  COMING_SOON_AND_FUTURE_WORK.md  COMING_SOON_SUMMARY.md  COMPLETE_FILE_INVENTORY.md  CONTRIBUTING.md  DIAGNOSTICS_AND_VERIFICATION_REPORT.md  FINAL_STATUS.txt  FOLDER_STRUCTURE_VERIFICATION.md  GITHUB_PREPARATION_SUMMARY.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_UPLOAD_READY.md  GITIGNORE_DOCUMENTATION_AND_DETAILS.md  HOW_TO_READ_ALL_MARKDOWN_FILES.md  LICENSE  README.md  VERIFICATION_DOCUMENTATION_INDEX.md  comprehensive_test_suite.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements.txt  test_cli_output.k2sh
demo/: QUICK_START.md  README.md  SHOWCASE_HUB_GUIDE.md  app.py  create_k2shbwi_format.py  create_k2shbwi_format_FIXED.py  requirements.txt  showcase_hub.html  validate_real_metrics.py
docs/: 00-index.md  SSIM_README.md  conversation.txt  terminal.txt  where_we_stand_now_2nd_Time
logs/: ANALYSIS_REPORT.html  ANALYSIS_REPORT.txt  METRICS_DASHBOARD.html  VERIFICATION_REPORT.json  VERIFICATION_REPORT.txt  logs_development
tests/: comprehensive_test_suite.py  generate_test_assets.py  test_algorithm_selection.py  test_compression.py  test_compression_selection.py  test_encoder.py  test_encoder_adaptive.py  test_encoder_decoder_compression.py  test_error_handling.py  test_format_spec.py  test_image_pyramid.py  test_missing_optional_libs.py  test_pyramid_additional.py  test_pyramid_formats.py  test_smart_compression.py  verify_step5.py
(+125 files in other folders)
