[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k2shbwi"
version = "0.1.0"
authors = [
  { name = "RITAM JASH" },
]
description = "K2SHBWI image format"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
compression = [
    "brotli",
    "zstandard",
]

[tool.setuptools.packages.find]
where = ["."]